--- a/Functional_Programming_Part1.ipynb
+++ b/Functional_Programming_Part1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9XShuUt0wKjLW4jJScLii",
+      "authorship_tag": "ABX9TyM0okWMmOBIWN+mR+05kWPr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1028,7 +1028,7 @@
       "cell_type": "code",
       "source": [
         "def func(name, age , **anyname):\n",
-        "    info = {\"name\":name, \"age\":age}\n",
+        "    info = {\"\":name, \"age\":age}\n",
         "    info.update(anyname)\n",
         "    return info\n",
         "func(\"Sachin\", 20, subject=\"Adv Py\")"
@@ -1086,9 +1086,169 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# apply->df and map\n",
+        "df['numdata']=df['numdata'].map(str)"
+      ],
       "metadata": {
         "id": "0pcjD-QEpXKb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# input as 1 and output as (1,1)\n",
+        "list1 = [1,2,3]\n",
+        "list(map(lambda x: (x,x**2), list1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q5UKKlcOqUjr",
+        "outputId": "c018c8bd-3112-46d2-e655-a0b280abd1fb"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(1, 1), (2, 4), (3, 9)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list2 = [[1,2,3,4,5], [1,2,3,4,5]]\n",
+        "list(map(lambda x: x*2,map(lambda x:x, list2)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g2R7u9Qdqqjq",
+        "outputId": "3669a1e5-64d6-4508-b012-08bdf97bf3f7"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[1, 2, 3, 4, 5, 1, 2, 3, 4, 5], [1, 2, 3, 4, 5, 1, 2, 3, 4, 5]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list2 = [[1,2,3,4,5], [1,2,3,4,5]]\n",
+        "\n",
+        "list(map(lambda x: list(map(lambda y:y+5,x)), list2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d0O2rDyJsEbz",
+        "outputId": "ef1ad075-5e87-41a6-b03c-cd6de060cade"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[6, 7, 8, 9, 10], [6, 7, 8, 9, 10]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# convert this into a single list with each element added 5\n",
+        "list1 = [[1,2,3], [2,3,4]]\n",
+        "# out = [6,7,8,7,8,9]"
+      ],
+      "metadata": {
+        "id": "eXjjKvk0sQjc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Demo:\n",
+        "    def __new__(self):\n",
+        "        self.__init__(self) # manually calling init\n",
+        "        print(\"Demo's new() invoked\") # new must always return the instance\n",
+        "    def __init__(self):\n",
+        "        print(\"Demo's __init__() invoked\")\n",
+        "class Derived_Demo():\n",
+        "    def __new__(self):\n",
+        "        print(\"Derived_Demo's new() invoked\")\n",
+        "    def __init__(self):\n",
+        "        print(\"Derived_Demo's __init__() invoked\")\n",
+        "\n",
+        "def main():\n",
+        "    obj1 = Derived_Demo()\n",
+        "    obj2 = Demo()\n",
+        "\n",
+        "main()\n",
+        "\n",
+        "# new must always return the instance\n",
+        "# the instance returned by new is consumed by intializer as next step hence if instance is not return __init__ will not be called"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2VHpXoeUtbeK",
+        "outputId": "42d4ac93-d671-4cdb-e340-c582df7e9e02"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Derived_Demo's new() invoked\n",
+            "Demo's __init__() invoked\n",
+            "Demo's new() invoked\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# className.__init__(childobj, add_vals)\n",
+        "# super from child to parent: super()\n",
+        "class B:\n",
+        "    pass\n",
+        "\n",
+        "class A(B):\n",
+        "    pass"
+      ],
+      "metadata": {
+        "id": "vQZ2f22-uUZ2"
       },
       "execution_count": null,
       "outputs": []
