--- a/Problem_Solving_3_Concurrent_Programming.ipynb
+++ b/Problem_Solving_3_Concurrent_Programming.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5253IXEIV2dD5TM8XJO84",
+      "authorship_tag": "ABX9TyNdRWLA86H61VOe8D/1xDMr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -595,6 +595,75 @@
       "source": [
         "from concurrent.futures import ThreadPoolExecutor, ProcessPoolExecutor\n",
         "\n",
+        "def func_b():\n",
+        "    time.sleep(5)\n",
+        "    return 5\n",
+        "\n",
+        "def func_a():\n",
+        "    time.sleep(5)\n",
+        "    return 6\n",
+        "\n",
+        "\n",
+        "executor = ThreadPoolExecutor(max_workers=2)\n",
+        "a = executor.submit(func_a)\n",
+        "b = executor.submit(func_b)\n",
+        "print(a,b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4eUksVLw0v3E",
+        "outputId": "c98d2b21-dac1-4793-8a96-5f803fb3488e"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<Future at 0x7de3e870e470 state=running> <Future at 0x7de3e870d090 state=running>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B4p4TwHw04ha",
+        "outputId": "518c3df4-d276-4332-86fb-1c964f7e0450"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<Future at 0x7de3e870e470 state=running>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jjxTwL5i047m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from concurrent.futures import ThreadPoolExecutor, ProcessPoolExecutor\n",
+        "\n",
         "# deadlock example\n",
         "def wait_on_b():\n",
         "\n",
@@ -615,7 +684,16 @@
       "metadata": {
         "id": "TtMTPeeMvQL_"
       },
-      "execution_count": 23,
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KskVFLGn0lKZ"
+      },
+      "execution_count": 24,
       "outputs": []
     },
     {
